Issue #125: Get Shenandoah max heap space + occupancy from marking events.